# openvc

./: .gitignore  CMakeLists.txt  init.py  main.cpp
include/: hello.hpp  opencv.hpp
python/: live.py  video.txt
src/: hello.cpp  opencv.cpp
